mobile wrap fix

--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -11,4 +11,6 @@
     .intro__title {
         font-size: 32px;
         line-height: 35px;
-    } }
+        white-space: pre-line;
+    }
+}
